# ChangeLog for gnome-base/libgnomekbd
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.33 2008/03/23 02:58:58 leio Exp $

*libgnomekbd-2.22.0 (23 Mar 2008)

  23 Mar 2008; Mart Raudsepp <leio@gentoo.org> +libgnomekbd-2.22.0.ebuild:
  New version for GNOME-2.22. Bug fixes, code cleanup and adapting to
  xkeyboard-config-1.2 changes in translation handling

  22 Mar 2008; Daniel Gryniewicz <dang@gentoo.org>
  libgnomekbd-2.20.0-r1.ebuild:
  Marked stable on amd64 for bug #212986

  17 Mar 2008; Jeroen Roovers <jer@gentoo.org> libgnomekbd-2.20.0-r1.ebuild:
  Stable for HPPA (bug #212986).

  15 Mar 2008; Brent Baude <ranger@gentoo.org> libgnomekbd-2.20.0-r1.ebuild:
  Marking libgnomekbd-2.20.0-r1 ppc64 for bug 212986

  15 Mar 2008; nixnut <nixnut@gentoo.org> libgnomekbd-2.20.0-r1.ebuild:
  Stable on ppc wrt bug 212986

  14 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  libgnomekbd-2.20.0-r1.ebuild:
  alpha/ia64/sparc stable wrt #212986

  12 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  libgnomekbd-2.20.0-r1.ebuild:
  stable x86, bug 212986

*libgnomekbd-2.20.0-r1 (11 Dec 2007)

  11 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/libgnomekbd-2.21.1-no-libbonobo.patch,
  +libgnomekbd-2.20.0-r1.ebuild:
  Fix compilation with newer popt.

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> libgnomekbd-2.20.0.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> libgnomekbd-2.20.0.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> libgnomekbd-2.20.0.ebuild:
  Marking libgnomekbd-2.20.0 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> libgnomekbd-2.20.0.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> libgnomekbd-2.20.0.ebuild:
  Stable on x86 (bug #199740)
