@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/libgnomekbd-2.22.0.ebuild,v 1.1 2008/03/23 02:58:58 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/libgnomekbd-2.22.0.ebuild,v 1.2 2008/06/05 11:55:52 remi Exp $
 
 EAPI="prefix"
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://www.gnome.org"
 
 LICENSE="LGPL-2"
 SLOT="0"
-KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux"
+KEYWORDS="~amd64-linux ~x86-linux"
 IUSE=""
 
 RDEPEND=">=dev-libs/glib-2.6
@@ -23,7 +23,7 @@ RDEPEND=">=dev-libs/glib-2.6
 		 >=gnome-base/libgnome-2.16
 		 >=gnome-base/libgnomeui-2.16
 		 >=x11-libs/libxklavier-3.2
-		 !<gnome-base/control-center-2.17.0"
+		 !<gnome-base/gnome-control-center-2.17.0"
 DEPEND="${RDEPEND}
 		>=dev-util/intltool-0.35
 		>=dev-util/pkgconfig-0.19"
