@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/libgnomekbd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.33 2008/03/23 02:58:58 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.34 2008/06/05 11:55:52 remi Exp $
+
+  05 Jun 2008; Rémi Cardona <remi@gentoo.org> libgnomekbd-2.18.2.ebuild,
+  libgnomekbd-2.20.0.ebuild, libgnomekbd-2.20.0-r1.ebuild,
+  libgnomekbd-2.22.0.ebuild:
+  pkgmove to gnome-base/gnome-control-center
 
 *libgnomekbd-2.22.0 (23 Mar 2008)
 
